--- a/index.html
+++ b/index.html
@@ -364,6 +364,36 @@
         <div class="section">
             <h2 id="confpapers">Selective Publications</h2>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr25-stablescore.png" title="stablescore" />
+                    <div> <strong>Stable-SCore: A Stable Registration-based Framework for 3D Shape Correspondence</strong><br />
+                        <br>
+                        Haolin Liu*, <strong>Xiaohang Zhan*</strong>, Zizheng Yan*, Zhongjin Luo, Yuxin Wen, Xiaoguang Han
+                        <br>
+                        <em>CVPR 2025</em><br />
+                        <br>
+                        <a href='https://arxiv.org/pdf/2503.21766'>[Paper]</a>
+                        <a href='https://haolinliu97.github.io/Stable-Score/'>[Project Page]</a>
+                        <!-- <a href=''>[Code]</a> -->
+                        <!-- <a href=''>[Demo]</a> -->
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr25-lod-gs.png" title="lod-gs" />
+                    <div> <strong>LOD-GS: Achieving Level of Details using Scalable Gaussian Soup</strong><br />
+                        <br>
+                        Jianxiong Shen, Yue Qian, <strong>Xiaohang Zhan</strong>
+                        <br>
+                        <em>CVPR 2025</em><br />
+                        <br>
+                        <a href=''>[Paper]</a>
+                        <a href=''>[Project Page]</a>
+                        <a href=''>[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/cvpr24-progmogen.png" title="progmogen" />
                     <div> <strong>Programmable Motion Generation for Open-Set Motion Control Tasks</strong><br />
                         <br>
@@ -494,6 +524,34 @@
                 </div>
 
             <h2 id="confpapers">Other Publications</h2>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-video-t1.png" title="video-t1" />
+                    <div> <strong>Video-T1: Test-Time Scaling for Video Generation</strong><br />
+                        <br>
+                        Fangfu Liu*, Hanyang Wang*, Yimo Cai, Kaiyan Zhang, <strong>Xiaohang Zhan</strong>, Yueqi Duan
+                        <br>
+                        <em>ArXiv Preprints</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2503.18942'>[Paper]</a>
+                        <a href='https://liuff19.github.io/Video-T1/'>[Project Page]</a>
+                        <a href='https://github.com/liuff19/Video-T1'>[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr25-4dfly.png" title="4dfly" />
+                    <div> <strong>4D-Fly: Fast 4D Reconstruction from a Single Monocular Video</strong><br />
+                        <br>
+                        Diankun Wu, Fangfu Liu, Yi-Hsin Hung, Yue Qian, <strong>Xiaohang Zhan</strong>, Yueqi Duan
+                        <br>
+                        <em>CVPR 2025</em><br />
+                        <br>
+                        <!-- <a href=''>[Paper]</a>
+                        <a href=''>[Project Page]</a>
+                        <a href=''>[Code]</a> -->
+                    </div>
+                    <div class="spanner"></div>
+                </div>
 
                 <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-headevolver-s.png" title="headevolver" />
                     <div> <strong>HeadEvolver: Text to Head Avatars via Expressive and Attribute-Preserving Mesh Deformation</strong><br />
