--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                     <div class="spanner"></div>
                 </div>
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/tapmo-arxiv.png" title="tapmo" />
+                <!-- <div class="paper" id="arxiv"><img class="paper" src="images/tapmo-arxiv.png" title="tapmo" />
                     <div> <strong>TapMo: Shape-aware Motion Generation of Skeleton-free Characters</strong><br />
                         <br>
                         Jiaxu Zhang, Shaoli Huang, Zhigang Tu, Xin Chen, <strong>Xiaohang Zhan</strong>, Gang Yu, Ying Shan
@@ -591,7 +591,7 @@
                         <a href='https://arxiv.org/abs/2310.12678'>[Paper]</a>
                     </div>
                     <div class="spanner"></div>
-                </div>
+                </div> -->
 
             <!-- <div> <strong>2023</strong><br /> -->
                 <!-- <div class="paper" id="arxiv"><img class="paper" src="images/semanticboost-arxiv.png" title="semanticboost" />
