--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
             <div class="paper">
                 <!-- I'm currently a senior research scientist in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. -->
                 <!-- Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016. -->
-                Xiaohang Zhan is currently a senior research scientist in AI Lab, Tencent. 
+                Xiaohang Zhan is currently a Senior Research Scientist at Adobe. 
                 Before that, He received his B.Eng. degree from <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a> in 2016, and Ph.D. degree from the <a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a> at the Chinese University of Hong Kong in 2020 (1 year shortened), supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. 
-                Afterwards, he joined Huawei (2020) and then Tencent (2023).
+                Afterwards, he joined Huawei (2020), Tencent (2023), and now Adobe (2025).
                 He is the reviewer of most top conferences and journals in AI&CV. 
                 He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
             </br>
@@ -246,10 +246,22 @@
     <div style="clear: both;">
         <div class="section">
             <h2 id="work">Professional Experience</h2>
+
+            <div class="edu" id="adobe"><img class="icon" src="icons/adobe_icon.svg" title="adobe" />
+                <div> <font size="20"><strong>Adobe</strong></font><br />
+                    <br>
+                    <font color="gray">Jul 2025 - Now. <br />
+                        Senior Research Scientist.<br />
+                        Research in generative AI to facilitate human creativity, shipping to Adobe products.<br />
+                    </font>
+                </div>
+                <div class="spanner"></div>
+            </div>
+
             <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon1.jpeg" title="tencent" />
                 <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
                     <br>
-                    <font color="gray">Mar 2023 - Now. <br />
+                    <font color="gray">Mar 2023 - Jun 2025. <br />
                         Senior Research Scientist.<br />
                         Research in 3D contents generation, and technology transfer to products in game industry and
                         social media.<br />
