--- a/index.html
+++ b/index.html
@@ -376,6 +376,20 @@
         <div class="section">
             <h2 id="confpapers">Selective Publications</h2>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/iccv25-larender.jpg" title="larender" />
+                    <div> <strong>LaRender: Training-Free Occlusion Control in Image Generation via Latent Rendering</strong><br />
+                        <br>
+                        <strong>Xiaohang Zhan</strong>, Dingming Liu
+                        <br>
+                        <em>ICCV 2025 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <br>
+                        <a href='https://arxiv.org/pdf/2508.07647'>[Paper]</a>
+                        <a href='https://xiaohangzhan.github.io/projects/larender/'>[Project Page]</a>
+                        <a href='https://github.com/XiaohangZhan/LaRender'>[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/cvpr25-stablescore.png" title="stablescore" />
                     <div> <strong>Stable-SCore: A Stable Registration-based Framework for 3D Shape Correspondence</strong><br />
                         <br>
