update video-t1 cvpr 2025

--- a/index.html
+++ b/index.html
@@ -405,19 +405,7 @@
                     <div class="spanner"></div>
                 </div>
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr25-lod-gs.png" title="lod-gs" />
-                    <div> <strong>LOD-GS: Achieving Level of Details using Scalable Gaussian Soup</strong><br />
-                        <br>
-                        Jianxiong Shen, Yue Qian, <strong>Xiaohang Zhan</strong>
-                        <br>
-                        <em>CVPR 2025</em><br />
-                        <br>
-                        <a href=''>[Paper]</a>
-                        <a href=''>[Project Page]</a>
-                        <a href=''>[Code]</a>
-                    </div>
-                    <div class="spanner"></div>
-                </div>
+                
 
 
                 <div class="paper" id="arxiv"><img class="paper" src="images/cvpr24-progmogen.png" title="progmogen" />
@@ -556,7 +544,7 @@
                         <br>
                         Fangfu Liu*, Hanyang Wang*, Yimo Cai, Kaiyan Zhang, <strong>Xiaohang Zhan</strong>, Yueqi Duan
                         <br>
-                        <em>ArXiv Preprints</em><br />
+                        <em>ICCV 2025</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2503.18942'>[Paper]</a>
                         <a href='https://liuff19.github.io/Video-T1/'>[Project Page]</a>
@@ -572,9 +560,22 @@
                         <br>
                         <em>CVPR 2025</em><br />
                         <br>
-                        <!-- <a href=''>[Paper]</a>
+                        <a href='https://openaccess.thecvf.com/content/CVPR2025/papers/Wu_4D-Fly_Fast_4D_Reconstruction_from_a_Single_Monocular_Video_CVPR_2025_paper.pdf'>[Paper]</a>
+                        <a href='https://diankun-wu.github.io/4D-Fly/'>[Project Page]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/cvpr25-lod-gs.png" title="lod-gs" />
+                    <div> <strong>LOD-GS: Achieving Level of Details using Scalable Gaussian Soup</strong><br />
+                        <br>
+                        Jianxiong Shen, Yue Qian, <strong>Xiaohang Zhan</strong>
+                        <br>
+                        <em>CVPR 2025</em><br />
+                        <br>
+                        <a href=''>[Paper]</a>
                         <a href=''>[Project Page]</a>
-                        <a href=''>[Code]</a> -->
+                        <a href=''>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
