--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Dingming Liu
                         <br>
-                        <em>ICCV 2025 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>ICCV 2025 (<font color="orange"><strong>Oral</strong></font>) (<font color="orange"><strong>Full review scores (6/6/6)</strong></font>)</em><br />
                         <br>
                         <a href='https://arxiv.org/pdf/2508.07647'>[Paper]</a>
                         <a href='https://xiaohangzhan.github.io/projects/larender/'>[Project Page]</a>
