--- a/projects/larender/index.html
+++ b/projects/larender/index.html
@@ -182,7 +182,7 @@
             <span class="author-block">
               <a href="https://xiaohangzhan.github.io/">Xiaohang Zhan</a>,</span>
             <span class="author-block">
-              Dingming Liu</span>
+              <a href="https://scholar.google.com/citations?hl=zh-CN&user=C0ubzjQAAAAJ">Dingming Liu</a></span>
           </div>
 
           <div class="is-size-5 publication-authors">
