--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         <a href='https://arxiv.org/pdf/2508.07647'>[Paper]</a>
                         <a href='https://xiaohangzhan.github.io/projects/larender/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/LaRender'>[Code]</a>
-                        <a href="youtube.com/watch?v=cSMuBYT4yJA">[Demo]</a>
+                        <a href="https://youtube.com/watch?v=cSMuBYT4yJA">[Demo]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
