update larender project page: video link

--- a/projects/larender/index.html
+++ b/projects/larender/index.html
@@ -212,7 +212,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://www.youtube.com/watch?v=cSMuBYT4yJA"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
