--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
             </br>
                 About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.</br>
             </br>
+               <font color="red"><strong>Hiring</strong>: I am hiring a 2026 summer intern onsite at Adobe Seattle for physics-grounded image editing and generation project. Open to PhD students based in the US, due to location and work authorization constraints. Feel free to email me your CV.</font>
+            </br>
                 <!-- <font color="red"><strong>I am open for a new position! Please contact me via email.</strong></font> -->
 
                 <!-- Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project. -->
