--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
 
             <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon1.jpeg" title="tencent" />
-                <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
+                <div> <font size="20"><strong>Tencent</strong></font><br />
                     <br>
                     <font color="gray">Mar 2023 - Jun 2025. <br />
                         Senior Research Scientist.<br />
@@ -383,12 +383,13 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Dingming Liu
                         <br>
-                        <em>ICCV 2025 (<font color="orange"><strong>Oral</strong></font>) (<font color="orange"><strong>Full review scores (6/6/6)</strong></font>)</em><br />
+                        <em>ICCV 2025 (<font color="orange"><strong>Best Paper Candidate & Oral</strong></font>) </em><br />
                         <br>
                         <a href='https://arxiv.org/pdf/2508.07647'>[Paper]</a>
                         <a href='https://xiaohangzhan.github.io/projects/larender/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/LaRender'>[Code]</a>
                         <a href="https://youtube.com/watch?v=cSMuBYT4yJA">[Demo]</a>
+                        <a href="https://www.rsipvision.com/ICCV2025-Thursday/13/">[News]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -416,7 +417,7 @@
                         <br>
                         Hanchao Liu, <strong>Xiaohang Zhan</strong>, Shaoli Huang, Tai-Jiang Mu, Ying Shan
                         <br>
-                        <em>CVPR 2024 (<font color="orange"><strong>Highlight</strong></font>, 11.9% of accepted papers)</em><br />
+                        <em>CVPR 2024 (<font color="orange"><strong>Highlight</strong></font>)</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2405.19283'>[Paper]</a>
                         <a href='https://hanchaoliu.github.io/Prog-MoGen/'>[Project Page]</a>
@@ -431,7 +432,7 @@
                         <br>
                         Xian Liu, <strong>Xiaohang Zhan</strong>, Jiaxiang Tang, Ying Shan, Gang Zeng, Dahua Lin, Xihui Liu, Ziwei Liu
                         <br>
-                        <em>CVPR 2024 (<font color="orange"><strong>Highlight</strong></font>, 11.9% of accepted papers)</em><br />
+                        <em>CVPR 2024 (<font color="orange"><strong>Highlight</strong></font>)</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2311.17061'>[Paper]</a>
                         <a href='https://alvinliu0.github.io/projects/HumanGaussian'>[Project Page]</a>
