--- a/projects/larender/index.html
+++ b/projects/larender/index.html
@@ -175,7 +175,7 @@
           <h1 class="title is-1 publication-title">LaRender: Training-Free Occlusion Control in Image Generation via Latent Rendering</h1>
           
           <div style="font-weight: bold; font-size: 1.5rem;">
-            ICCV 2025 (<span style="color: orange;">Oral</span>)
+            ICCV 2025 (<span style="color: orange;">Best Paper Candidate & Oral</span>)
           </div>
 
           <div class="is-size-5 publication-authors">
@@ -230,6 +230,17 @@
                   <span>Code</span>
                   </a>
               </span>
+              <!-- News Link. -->
+              <span class="link-block">
+                <a href="https://www.rsipvision.com/ICCV2025-Thursday/13/"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <!-- <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span> -->
+                  <span>News</span>
+                  </a>
+              </span>
+
             </div>
 
           </div>
