--- a/index.html
+++ b/index.html
@@ -543,6 +543,21 @@
 
             <h2 id="confpapers">Other Publications</h2>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/social-agent.jpg" title="social-agent" />
+                    <div> <strong>Social Agent: Mastering Dyadic Nonverbal Behavior Generation via Conversational LLM Agents</strong><br />
+                        <br>
+                        Zeyi Zhang, Yanju Zhou, Heyuan Yao, Tenglong Ao, <strong>Xiaohang Zhan</strong>, Libin Liu
+                        <br>
+                        <em>SIGGRAPH ASIA 2025</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2510.04637'>[Paper]</a>
+                        <a href='https://pku-mocca.github.io/Social-Agent-Page/'>[Project Page]</a>
+                        <a href=''>[Code]</a>
+                        <a href="https://www.youtube.com/watch?v=fYv43x27zjw">[Video]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/arxiv-video-t1.png" title="video-t1" />
                     <div> <strong>Video-T1: Test-Time Scaling for Video Generation</strong><br />
                         <br>
