--- a/index.html
+++ b/index.html
@@ -378,6 +378,18 @@
         <div class="section">
             <h2 id="confpapers">Selective Publications</h2>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/uniser.gif" title="uniser" />
+                    <div> <strong>UniSER: A Foundation Model for Unified Soft Effects Removal</strong><br />
+                        <br>
+                        Jingdong Zhang, Lingzhi Zhang, Qing Liu, Mang Tik Chiu, Connelly Barnes, Yizhou Wang, Haoran You, Xiaoyang Liu, Yuqian Zhou, Zhe Lin, Eli Shechtman, Sohrab Amirghodsi, Xin Li, Wenping Wang, <strong>Xiaohang Zhan</strong>
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://arxiv.org/pdf/2511.14183'>[Paper]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/iccv25-larender.jpg" title="larender" />
                     <div> <strong>LaRender: Training-Free Occlusion Control in Image Generation via Latent Rendering</strong><br />
                         <br>
