--- a/index.html
+++ b/index.html
@@ -378,6 +378,20 @@
         <div class="section">
             <h2 id="confpapers">Selective Publications</h2>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/replan.gif" title="replan" />
+                    <div> <strong>RePlan: Reasoning-Guided Region Planning for Complex Instruction-Based Image Editing</strong><br />
+                        <br>
+                        Tianyuan Qu, Lei Ke, <strong>Xiaohang Zhan</strong>, Longxiang Tang, Yuqi Liu, Bohao Peng, Bei Yu, Dong Yu, Jiaya Jia
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://arxiv.org/pdf/2512.16864'>[Paper]</a>
+                        <a href='https://replan-iv-edit.github.io/'>[Project Page]</a>
+                        <a href="https://github.com/dvlab-research/RePlan">[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/uniser.gif" title="uniser" />
                     <div> <strong>UniSER: A Foundation Model for Unified Soft Effects Removal</strong><br />
                         <br>
