--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
                 Before that, He received his B.Eng. degree from <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a> in 2016, and Ph.D. degree from the <a href='http://mmlab.ie.cuhk.edu.hk/'>Multimedia Laboratory (MMLab)</a> at the Chinese University of Hong Kong in 2020 (1 year shortened), supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>. 
                 Afterwards, he joined Huawei (2020), Tencent (2023), and now Adobe (2025).
                 He is the reviewer of most top conferences and journals in AI&CV. 
-                He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> by Baidu Scholar in 2021. 
+                <!-- He was awarded <a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese New Stars in Artificial Intelligence</a> in 2021.  -->
             </br>
-                About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.</br>
-            </br>
+                <!-- About his research preference: He is interested in curiosity-driven research on unsolved problems. He is keen on taking challenges of new problems as long as they are valuable in research or business.</br> -->
+            <!-- </br>
                <font color="red"><strong>Hiring</strong>: I am hiring a 2026 summer intern onsite at Adobe Seattle for the multi-modal understanding and generation project. Open to PhD students based in the US, due to location and work authorization constraints. Feel free to email me your CV.</font>
-            </br>
+            </br> -->
                 <!-- <font color="red"><strong>I am open for a new position! Please contact me via email.</strong></font> -->
 
                 <!-- Besides, he was the major contributor of the repo <a href="https://github.com/open-mmlab/mmselfsup">MMSelfsup</a> in OpenMMLab project. -->
@@ -270,7 +270,7 @@
                     <br>
                     <font color="gray">Mar 2023 - Jun 2025. Shenzhen. <br />
                         Senior Research Scientist.<br />
-                        Research on multi-modal language models, 3D and 4D contents generation. I technically led a team of 5 full-time researchers to conduct research on humam & face motion generation, and shipped our solutions to products in game industry and
+                        Research on multi-modal language models, video understanding, 3D and 4D contents generation. I technically led a team of 5 full-time researchers to conduct research on humam & face motion generation, and shipped our solutions to products in game industry and
                         social media.<br />
                     </font>
                 </div>
