--- a/index.html
+++ b/index.html
@@ -401,6 +401,18 @@
         <div class="section">
             <h2 id="confpapers">Multi-Modal Understanding and Generation</h2>
 
+                <div class="paper" id="arxiv"><img class="paper" src="images/mtpano.gif" title="mtpano" />
+                    <div> <strong>MTPano: Multi-Task Panoramic Scene Understanding via Label-Free Integration of Dense Prediction Priors</strong><br />
+                        <br>
+                        Jingdong Zhang, <strong>Xiaohang Zhan</strong>, Lingzhi Zhang, Yizhou Wang, Zhengming Yu, Jionghao Wang, Wenping Wang, Xin Li
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://arxiv.org/pdf/2602.05330'>[Paper]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="arxiv"><img class="paper" src="images/replan.gif" title="replan" />
                     <div> <strong>RePlan: Reasoning-Guided Region Planning for Complex Instruction-Based Image Editing</strong><br />
                         <br>
@@ -411,6 +423,18 @@
                         <a href='https://arxiv.org/pdf/2512.16864'>[Paper]</a>
                         <a href='https://replan-iv-edit.github.io/'>[Project Page]</a>
                         <a href="https://github.com/dvlab-research/RePlan">[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/uniser.gif" title="uniser" />
+                    <div> <strong>UniSER: A Foundation Model for Unified Soft Effects Removal</strong><br />
+                        <br>
+                        Jingdong Zhang, Lingzhi Zhang, Qing Liu, Mang Tik Chiu, Connelly Barnes, Yizhou Wang, Haoran You, Xiaoyang Liu, Yuqian Zhou, Zhe Lin, Eli Shechtman, Sohrab Amirghodsi, Xin Li, Wenping Wang, <strong>Xiaohang Zhan</strong>
+                        <br>
+                        <em>CVPR 2026</em><br />
+                        <br>
+                        <a href='https://arxiv.org/pdf/2511.14183'>[Paper]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
@@ -430,17 +454,6 @@
                     <div class="spanner"></div>
                 </div>
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/uniser.gif" title="uniser" />
-                    <div> <strong>UniSER: A Foundation Model for Unified Soft Effects Removal</strong><br />
-                        <br>
-                        Jingdong Zhang, Lingzhi Zhang, Qing Liu, Mang Tik Chiu, Connelly Barnes, Yizhou Wang, Haoran You, Xiaoyang Liu, Yuqian Zhou, Zhe Lin, Eli Shechtman, Sohrab Amirghodsi, Xin Li, Wenping Wang, <strong>Xiaohang Zhan</strong>
-                        <br>
-                        <em>arXiv preprint</em><br />
-                        <br>
-                        <a href='https://arxiv.org/pdf/2511.14183'>[Paper]</a>
-                    </div>
-                    <div class="spanner"></div>
-                </div>
 
                 <div class="paper" id="arxiv"><img class="paper" src="images/iccv25-larender.jpg" title="larender" />
                     <div> <strong>LaRender: Training-Free Occlusion Control in Image Generation via Latent Rendering</strong><br />
