--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <br>
                     <font color="gray">Mar 2023 - Jun 2025. Shenzhen. <br />
                         Senior Research Scientist.<br />
-                        Research on multi-modal language models, video understanding, 3D and 4D contents generation. I technically led a team of 5 full-time researchers to conduct research on humam & face motion generation, and shipped our solutions to products in game industry and
+                        Research on multi-modal language models, video understanding, 3D and 4D contents generation. I technically led a team of 5 full-time researchers to conduct research on human & face motion generation, and shipped our solutions to products in game industry and
                         social media.<br />
                     </font>
                 </div>
