--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
     <div style="clear: both;">
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
-                <li>Top 100 Chinese Rising Stars in Artificial Intelligence, <a href="https://xueshu.baidu.com/usercenter/index/aischolar">AI华人新星百强</a> (100 out of 45205), 2021, Baidu Scholar.</li>
+                <li><a href="https://xueshu.baidu.com/usercenter/index/aischolar">Top 100 Chinese Rising Stars in Artificial Intelligence</a> (100 out of 45205), 2021, Baidu Scholar & TIC</li>
                 <!-- <li>Huawei Genius Youth Program (华为天才少年计划), 2020</li> -->
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
